Updated bibliography and news.

--- a/docs/_bibliography/refs.bib
+++ b/docs/_bibliography/refs.bib
@@ -10,6 +10,18 @@
       link = {https://arxiv.org/abs/2109.04771}
 }
 
+@inproceedings{tuomainen2021manipulation,
+      title={Manipulation of granular materials by learning particle interactions},
+      author={Neea Tuomainen and David Blanco-Mulero and Ville Kyrki},
+      year={2021},
+      booktitle = {arXiv preprint arXiv:2111.02274},
+      eprint={2111.02274},
+      archivePrefix={arXiv},
+      group = "preprint",
+      primaryClass={cs.RO},
+      link = {https://arxiv.org/abs/2111.02274}
+}
+
 @inproceedings{blancomulero2021evolvinggraph,
   title={Evolving-Graph Gaussian Processes},
   author={Blanco-Mulero, David and Heinonen, Markus and Kyrki, Ville},
@@ -21,22 +33,24 @@
 }
 
 @inproceedings{2017_collision_avoidance,
-author = {Di Castro, Mario and Mulero, David Blanco and Ferre, Manuel and Masi, Alessandro},
-title = {A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation},
-year = {2017},
-isbn = {9781450352802},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-doi = {10.1145/3068796.3068800},
-booktitle = {Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering},
-pages = {6–10},
-numpages = {5},
-keywords = {Collision Avoidance, Robotics, Anti-collision system, Teleoperation, Artificial Intelligence},
-location = {Paris, France},
-series = {ICMRE 2017},
-link = {https://doi.org/10.1145/3068796.3068800},
-group = "conference"
+    author = {Di Castro, Mario and Mulero, David Blanco and Ferre, Manuel and Masi, Alessandro},
+    title = {A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation},
+    year = {2017},
+    isbn = {9781450352802},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    doi = {10.1145/3068796.3068800},
+    booktitle = {Proceedings of the 3rd International Conference on Mechatronics and Robotics Engineering},
+    pages = {6–10},
+    numpages = {5},
+    keywords = {Collision Avoidance, Robotics, Anti-collision system, Teleoperation, Artificial Intelligence},
+    location = {Paris, France},
+    series = {ICMRE 2017},
+    link = {https://doi.org/10.1145/3068796.3068800},
+    group = "conference"
 }
+
+
 
 
 @inproceedings{2016_puma,
