--- a/docs/_bibliography/refs.bib
+++ b/docs/_bibliography/refs.bib
@@ -1,26 +1,29 @@
-@inproceedings{hietala2021closing,
-      title={Closing the Sim2Real Gap in Dynamic Cloth Manipulation}, 
-      author={Julius Hietala and David Blanco-Mulero and Gokhan Alcan and Ville Kyrki},
-      year={2021},
-      eprint={2109.04771},
-      booktitle = {arXiv preprint arXiv:2109.04771},
-      archivePrefix={arXiv},
-      group = "preprint",
-      primaryClass={cs.RO},
-      link = {https://arxiv.org/abs/2109.04771}
+@inproceedings{hietala2022closing,
+  title={Learning Visual Feedback Control for Dynamic Cloth Folding},
+  author={Hietala, Julius and Blanco-Mulero, David and Alcan, Gokhan and Kyrki,Ville},
+  booktitle = {IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year={2022},
+  link = {https://arxiv.org/abs/2109.04771},
+  group = "conference",
+  website = {https://sites.google.com/view/dynamic-cloth-folding/home},
+  code = "https://github.com/hietalajulius/dynamic-cloth-folding"
 }
 
-@inproceedings{tuomainen2021manipulation,
-      title={Manipulation of granular materials by learning particle interactions},
-      author={Neea Tuomainen and David Blanco-Mulero and Ville Kyrki},
-      year={2021},
-      booktitle = {arXiv preprint arXiv:2111.02274},
-      eprint={2111.02274},
-      archivePrefix={arXiv},
-      group = "preprint",
-      primaryClass={cs.RO},
-      link = {https://arxiv.org/abs/2111.02274}
-}
+@article{tuomainen2021manipulation,
+  author={Tuomainen*, Neea and Blanco-Mulero*, David and Kyrki, Ville},
+  journal={IEEE Robotics and Automation Letters},
+  title={Manipulation of Granular Materials by Learning Particle Interactions},
+  year={2022},
+  volume={7},
+  number={2},
+  pages={5663-5670},
+  doi={10.1109/LRA.2022.3158382},
+  link = {https://ieeexplore.ieee.org/document/9732690?source=authoralert},
+  group = "journal",
+  website = {https://sites.google.com/view/granular-gnn-manipulation},
+  code = "https://github.com/dblanm/gnn-manip"
+  }
+
 
 @inproceedings{blancomulero2021evolvinggraph,
   title={Evolving-Graph Gaussian Processes},
@@ -32,8 +35,21 @@
   code = "https://github.com/dblanm/evolving-ggp"
 }
 
+@article{rajani2022coimitation,
+      title={Co-Imitation: Learning Design and Behaviour by Imitation},
+      author={Rajani, Chang and Arndt, Karol and Blanco-Mulero, David and Luck, Kevin Sebastian and Kyrki, Ville},
+      year={2022},
+      journal={arXiv preprint arXiv:2209.01207},
+      eprint={2209.01207},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      link = {https://arxiv.org/abs/2209.01207},
+      group = "preprint",
+}
+
+
 @inproceedings{2017_collision_avoidance,
-    author = {Di Castro, Mario and Mulero, David Blanco and Ferre, Manuel and Masi, Alessandro},
+    author = {Di Castro, Mario and Blanco-Mulero, David and Ferre, Manuel and Masi, Alessandro},
     title = {A Real-Time Reconfigurable Collision Avoidance System for Robot Manipulation},
     year = {2017},
     isbn = {9781450352802},
@@ -56,7 +72,7 @@
 @inproceedings{2016_puma,
 title = {Cascade Control of the PUMA 560 Motors using Simulink and Arduino},
 keywords = {robotics control, cascade control, Arduino},
-author = {Blanco, David and Alonso, Seraf{\'i}n and Dom{\'i}nguez, Manuel},
+author = {Blanco-Mulero, David and Alonso, Seraf{\'i}n and Dom{\'i}nguez, Manuel},
 year = {2016},
 volume = {1},
 pages = {349--356},
